# 2024_SoSe_Bus

./: .gitignore  .pdm-python  1_1_Gebäudeautomation.html  1_2_Planungsabläufe.html  2_1_Messkette.html  2_2_Steuerung.html  2_3_Funktionen.html  2_4_Objektorientierung.html  3_1_Blockschaltbild.html  3_2_Regelkreis.html  3_3_Regelverhalten.html  404.html  4_1_Speicherprogrammierbare_Steuerung.html  5_1_Signalisierung.html  5_2_Buszugriffsverfahren.html  5_3_Uebertragungssicherheit.html  5_4_Bussysteme_in_der_Gebaudeautomation.html  5_4_Bussysteme_in_der_Gebudeautomation.html  6_1_Smart_Metering.html  Aufgaben_Bewertung.md  CLAUDE.md  EGT_Bussysteme.html  README.md  encryptcontent.cache  index.html  main.py  mkdocs.yml  pyproject.toml  search.html
1_1_Gebäudeautomation/: index.html
1_2_Planungsabläufe/: index.html
2_1_Messkette/: index.html
2_2_Steuerung/: index.html
2_3_Funktionen/: index.html
2_4_Objektorientierung/: index.html
3_1_Blockschaltbild/: index.html
3_2_Regelkreis/: index.html
3_3_Regelverhalten/: index.html
3_3_Regelverhalten copy/: index.html
4_1_Speicherprogrammierbare_Steuerung/: index.html
4_2_Sprachen_nach_IEC_61131-3/: index.html
4_3_Appendix_Twincat/: index.html
5_1_Bussysteme/: index.html
5_1_Signalisierung/: index.html
5_2_Buszugriffsverfahren/: index.html
5_2_Theoretische_Grundlagen/: index.html
5_3_Feldbusse/: index.html
5_3_Uebertragungssicherheit/: index.html
5_4_Bussysteme_in_der_Gebudeautomation/: index.html
5_4_Bussysteme_in_der_Gebudeautomation copy/: index.html
6_1_Smart_Metering/: index.html
(+167 files in other folders)
