[project]
name = "2024_SoSe_Bus"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jhumci", email = "julian.huber@mci.edu"},
]
dependencies = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.12", "mkdocs-encryptcontent-plugin>=3.0.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
